# agentvoicevox

./: .dockerignore  .env.example  .gitattributes  .gitignore  LICENSE  README.md  VIBE_CODING_RULES.MD  advanced-voice.html  doc_checker.py  package-lock.json  package.json  tailwind.config.ts
ovos-voice-agent/AgentVoiceBoxEngine/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  verify_mcp_real_infra.py
ovos-voice-agent/AgentVoiceBoxEngine/backend/apps/api_keys/: __init__.py  api.py  apps.py  models.py  schemas.py  services.py
ovos-voice-agent/AgentVoiceBoxEngine/backend/apps/audit/: __init__.py  api.py  apps.py  models.py  schemas.py  services.py
ovos-voice-agent/AgentVoiceBoxEngine/backend/apps/billing/: api.py  apps.py  models.py  schemas.py  services.py
ovos-voice-agent/AgentVoiceBoxEngine/backend/apps/core/: __init__.py  api.py  api_admin_dashboard.py  apps.py  cache.py  exceptions.py  models.py
ovos-voice-agent/AgentVoiceBoxEngine/backend/apps/llm/: __init__.py  api.py  schemas.py  services.py
ovos-voice-agent/AgentVoiceBoxEngine/backend/apps/mcp/: api.py  apps.py  server_factory.py  tools.py
ovos-voice-agent/AgentVoiceBoxEngine/backend/apps/notifications/: api.py  apps.py  models.py  schemas.py  services.py
ovos-voice-agent/AgentVoiceBoxEngine/backend/apps/projects/: api.py  apps.py  (+3 more)
ovos-voice-agent/AgentVoiceBoxEngine/backend/config/: asgi.py  urls.py  voice_agent.py  wsgi.py
ovos-voice-agent/AgentVoiceBoxEngine/backend/integrations/: __init__.py  kafka.py  keycloak.py  lago.py  opa.py  paypal.py  permissions.py  spicedb.py  spicedb_schema.zed  temporal.py  vault.py
ovos-voice-agent/AgentVoiceBoxEngine/backend/k8s/: deployment.yaml
ovos-voice-agent/AgentVoiceBoxEngine/backend/nginx/: nginx.conf
ovos-voice-agent/AgentVoiceBoxEngine/backend/prometheus/: prometheus.yml
ovos-voice-agent/AgentVoiceBoxEngine/backend/realtime/: __init__.py  middleware.py  routing.py
ovos-voice-agent/AgentVoiceBoxEngine/backend/temporal/: init-namespace.sh
ovos-voice-agent/AgentVoiceBoxEngine/backend/tests/: __init__.py  conftest.py  test_property_api_key_authentication.py  test_property_audit_log.py  test_property_cache_tenant_isolation.py  test_property_env_validation.py  test_property_exception_sanitization.py  test_property_jwt_authentication.py  test_property_pydantic_validation.py  test_property_rate_limiting.py  test_property_request_logging.py  test_property_session_auto_termination.py  test_property_spicedb_permissions.py  test_property_tenant_access_control.py  test_property_tenant_isolation.py  test_property_tenant_scoped_model.py  test_property_websocket_auth.py  test_property_workflow_retry.py
ovos-voice-agent/AgentVoiceBoxEngine/backend/vault/: setup.sh
(+696 files in other folders)
